2009-04-22  Aldy Hernandez  <aldyh@redhat.com>

	* gimple.c (gimple_copy): Unshare the debuglocus.

2009-04-22  Aldy Hernandez  <aldyh@redhat.com>

	* debuglocus.c (init_debuglocus_table): Initialize free_list_idx.
	(new_debuglocus_entry): Use the free list if available.
	(debuglocus_free_entry): New.
	(create_duplicate_debuglocus): 
	(debuglocus_bitmap_verify): Verify free list.
	* debuglocus.h (debuglocus_table_d): Add free_list_idx field.
	(debuglocus_free_entry): New prototype.

2009-04-17  Aldy Hernandez  <aldyh@redhat.com>

	* debuglocus.c (destroy_debuglocus_table): Clear bitmap.
	(debuglocus_bitmap_populate): Only initialize global bitmap once.
	Add GTY marker to global_dl_bitmap.
	* passes.c (execute_one_pass): Clear before and after bitmaps.

2009-04-15  Andrew MacLeod  <amacleod@redhat.com>

	* debuglocus.c (new_debuglocus_entry): Initialize new fields.
	(create_duplicate_debuglocus): Don't use order field.
	(create_debuglocus_for_decl): Set original_locus field.
	(find_debuglocus, find_and_detach_debuglocus,
	find_and_detach_or_create_debuglocus): Remove.
	(replace_locus_with_debuglocus): New. Factored code.
	(set_debuglocus_expr): New. Set expression field.
	(orphan_debuglocus): New. Relocate from a deleted statement.
	(replace_gimple_locus_with_debuglocus): Factor out some code.
	(replace_phiarg_locus_with_debuglocus): New. Set debuglocus in phiarg.
	(pretty_print_debuglocus): New. Print debuglocus to a buffer.
	(dump_debuglocus): New. Print out a debuglocus for a listing.
	(dump_debuglocus_entry): Adjust table entry formatting and fields.
	(dump_debuglocus_table): Print only entries referred to in function.
	(debuglocus_bitmap_populate_helper): Handle lists.
	(debuglocus_bitmap_populate): Also process orphans.
	(debuglocus_bitmap_verify): Add bitmaps to table dump.
	* debuglocus.h (struct debuglocus_entry_d): Remove order field, add
	expression and original_locus.
	(locus_from_debuglocus): Return original locus field.