@@ -1,3 +1,12 @@
+2009-04-23  Aldy Hernandez  <aldyh@redhat.com>
+
+	* debuglocus.c (create_duplicate_debuglocus): Allow non debuglocus
+	entries.
+	* tree-mudflap.c (mf_build_check_statement_for): Duplicate debuglocus
+	entries.
+	(mx_register_decls): Same.
+	* tree-vect-transform.c (vect_finish_stmt_generation): Same.
+
 2009-04-22  Aldy Hernandez  <aldyh@redhat.com>
 
 	* gimple.c (gimple_copy): Unshare the debuglocus.
